--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="text-2xl font-bold border-b-2 border-red-800">Mis proyectos</p>
         </div>
         <div class="flex justify-around">
-            <a href="https://github.com/AlejandroJorba/ExercisesMBelgrano/tree/main/calculadora%201/index.html">Calculadora</a>
+            <a href="https://github.com/AlejandroJorba/ExercisesMBelgrano/tree/main/calculadora%201">Calculadora</a>
             <a href="">Formulario</a>
         </div>
     </div>
