--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="flex justify-around">
             <a href="https://github.com/AlejandroJorba/ExercisesMBelgrano/tree/main/calculadora%201">Calculadora</a>
-            <a href="https://github.com/AlejandroJorba/ExercisesMBelgrano/ejercicioFormulario/index.html">Formulario</a>
+            <a href="https://github.com/AlejandroJorba/ExercisesMBelgrano/ejercicioFormulario/">Formulario</a>
         </div>
     </div>
 
