--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </div>
         <div class="flex justify-around">
             <a href="./calculadora%201/index.html">Calculadora</a>
-            <a href="https://github.com/AlejandroJorba/ExercisesMBelgrano/ejercicioFormulario/index.md">Formulario</a>
+            <a href="./POO%20Javascript/index.html">Reproductor de Música</a>
+            <a href="./ejercicioFormulario/index.html">Formulario</a>
         </div>
     </div>
 
